<resources>
    <string name="app_name">Aykol</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_news">Новости</string>
    <string name="title_services">Услуги</string>
    <string name="title_profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth">Авторизуйтесь</string>
    <string name="inn">Персональный номер</string>
    <string name="password">Пароль</string>
    <string name="_10">Персональный номер состоит из 10 значений</string>
    <string name="next">Продолжить</string>
    <string name="inputs">Заполните поля</string>
    <string name="news">В мэрии объяснили, почему Бишкеку не хватает воды. И что они делают, чтобы решить проблему</string>
    <string name="news1">В пресс-службе мэрии Бишкека заявили, что неоднократно проводились заседания техсовета и совещания с участием мэра столицы Эмилбека Абдыкадырова, где были даны поручения по перебросу воды в жилой массив "Арча-Бешик".</string>
    <string name="school">Цифровая школа</string>
    <string name="record">Запись к врачу</string>
    <string name="house">Имущество</string>
    <string name="papers">Выписки</string>
    <string name="kaktus_media">Источник: Kaktus Media</string>
    <string name="data">7 июня 2023</string>
    <string name="journalist_name">Борубек Кудаяров</string>
    <string name="news2">Так, по информации муниципалитета, нерегулируемый рост потребителей питьевой воды, повышение жилищно-бытовых условий, а также происходящие природно-климатические изменения приводят к резкому снижению статического и динамического уровня подземных вод.</string>
    <string name="comment_hint">Напишите комментарий</string>
    <string name="comments">Комментарии</string>
    <string name="comment_user">Умираю от жары</string>
    <string name="business">Бизнес</string>
    <string name="social_pay">Соц выплаты</string>
    <string name="family">Семья</string>
    <string name="cars_pay">Штрафы на авто</string>
    <string name="in_develop">В разработке</string>
    <string name="no_data">Нет данных</string>
    <string name="example_gmail">example@gmail.com</string>
    <string name="notification">Уведомления</string>
    <string name="language">Язык</string>
    <string name="personal">Персонализация</string>
    <string name="my_cars">Мои авто</string>
    <string name="second_name">Фамилия</string>
    <string name="name">Имя</string>
    <string name="third_name">Отчество</string>
    <string name="email">Эл. почта</string>
    <string name="save">Сохранить</string>
    <string name="change_password">Сменить пароль</string>
    <string name="online_record">Онлайн запись на прием к врачу</string>
    <string name="time">Сэкономьте свое время</string>
    <string name="how_record">Как записаться?</string>
    <string name="via_web">Через сайт:</string>
    <string name="website">registratura.med.kg</string>
    <string name="move_web">Перейти на сайт</string>
    <string name="via_number">По домашнему телефону</string>
    <string name="cfm">Список номеров ЦСМ</string>
</resources>