<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/auth"
        android:textColor="@color/black"
        android:textSize="24sp"
        />
    
    <EditText
        android:id="@+id/personNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inn"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:inputType="number"
        android:minEms="10"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:inputType="numberPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/next"
        android:backgroundTint="@color/blue"/>
</LinearLayout>