<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/authFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.aykol.ui.home.HomeFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.aykol.ui.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.aykol.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.aykol.AuthFragment"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/newsFragment"
        android:name="com.example.aykol.ui.home.NewsFragment"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/recordFragment"
        android:name="com.example.aykol.ui.services.RecordFragment"
        android:label="@string/record"
        tools:layout="@layout/fragment_record" />
    <fragment
        android:id="@+id/houseFragment"
        android:name="com.example.aykol.ui.services.HouseFragment"
        android:label="@string/house"
        tools:layout="@layout/fragment_house" />

    <fragment
        android:id="@+id/profileOptionsFragment"
        android:name="com.example.aykol.ui.profile.ProfileOptionsFragment"
        tools:layout="@layout/fragment_profile_options" />

    <fragment
        android:id="@+id/CFMFragment"
        android:name="com.example.aykol.ui.services.CFMFragment"
        tools:layout="@layout/fragment_c_f_m" />
</navigation>