<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.services.RecordFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:backgroundTint="@color/blue">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/online_record"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@id/tv"
                app:layout_constraintTop_toBottomOf="@id/tv"
                android:textAlignment="center"
                android:layout_margin="@dimen/_20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_record"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"/>

    <ImageView
        android:id="@+id/firstImage"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:src="@drawable/background"
        app:layout_constraintStart_toStartOf="@id/tvRecord"
        app:layout_constraintTop_toBottomOf="@id/tvRecord" />

    <TextView
        android:id="@+id/via"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/via_web"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@id/firstImage"
        app:layout_constraintTop_toTopOf="@id/firstImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textSize="@dimen/_20sp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@id/via"
        app:layout_constraintTop_toTopOf="@id/via"
        android:layout_marginStart="@dimen/_10dp"/>

    <Button
        android:id="@+id/btnVia"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/move_web"
        app:layout_constraintTop_toBottomOf="@id/via"
        android:layout_margin="@dimen/_20dp"
        android:backgroundTint="@color/blue"/>

    <ImageView
        android:id="@+id/secondImage"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:src="@drawable/two"
        app:layout_constraintStart_toStartOf="@id/btnVia"
        app:layout_constraintTop_toBottomOf="@id/btnVia" />

    <TextView
        android:id="@+id/numberPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/via_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@id/secondImage"
        app:layout_constraintTop_toTopOf="@id/secondImage" />

    <Button
        android:id="@+id/btnViaNumber"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/cfm"
        app:layout_constraintTop_toBottomOf="@id/numberPhone"
        android:layout_margin="@dimen/_20dp"
        android:backgroundTint="@color/white_gray"
        android:textColor="@color/blue" />

</androidx.constraintlayout.widget.ConstraintLayout>