<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileOptionsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

    <de.hdodenhof.circleimageview.CircleImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40dp"
        android:id="@+id/profileImage"
        android:scaleType="centerCrop"
        android:layout_height="120dp"/>

    <TextView
        android:id="@+id/secondName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/et"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintStart_toStartOf="@id/secondName"
        app:layout_constraintTop_toBottomOf="@id/secondName"
        android:paddingStart="@dimen/_10dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:paddingStart="@dimen/_10dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/thirdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_name"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et2"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/et3"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintStart_toStartOf="@id/thirdName"
        app:layout_constraintTop_toBottomOf="@id/thirdName"
        android:paddingStart="@dimen/_10dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et3"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/et4"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:paddingStart="@dimen/_10dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et4"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/et5"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:paddingStart="@dimen/_10dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/tvChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et5"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:clickable="true"
                android:focusable="true" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:text="@string/save"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/tvChangePassword"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_40dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>